# deimos

./: .gitignore  pyproject.toml
src/deimos/: __init__.py  __main__.py
