[project]
name = "deimos"
version = "0.1.0"
dependencies = [
    "numpy>=2.2.6",
    "pillow>=11.2.1",
    "matplotlib>=3.10.3",
    "scikit-image>=0.25.2",
]
requires-python = ">= 3.8"

[project.scripts]
"deimos" = "deimos:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/deimos"]

[tool.pyright]
venvPath = "."
venv = ".venv"
